# hydrostone_suites

./: .env.example  .gitignore  README.md  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: settings.py  urls.py
scripts/: deploy.sh
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_rename_contacts_contact.py
templates/: base.html
templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
templates/users/: login.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_is_resident_and_more.py
